<resources>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_cast">Connect to Google Cast</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_context_menu">Context menu</string>
    <string name="action_play">Play</string>
    <string name="action_play_locally">Play locally</string>
    <string name="action_queue_show">Show queue</string>
    <string name="action_queue_append">Append to queue</string>
    <string name="action_queue_append_all">Append all to queue</string>
    <string name="action_queue_clear">Clear queue</string>
    <string name="casting_stream">Casting %1$s on %2$s</string>
    <string name="queue_stream">Queueing %1$s on %2$s</string>
    <string name="queue_streams">Queueing %1$d on %2$s</string>
    <string name="queue">Queue</string>
    <string name="playing_stream_on_this_device">Playing %1$s on this device</string>
    <string name="title_hint">Title</string>
    <string name="url_hint">Url</string>
    <string name="mimeType_hint">Mime Type</string>
    <string name="missing_mandatory_parameter">Missing mandatory parameter</string>
    <string name="unsupported_mime_type">Unsupported mime type</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="empty_streams_title">Empty stream list</string>
    <string name="empty_streams">Add streams by tapping on the + button</string>
    <string name="loading">Loading…</string>
    <string name="audio_or_video">Is this stream an audio or video stream?</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="about_app_version">About %1$s v%2$s</string>
    <string name="about_license">License: GPL v3</string>
    <string name="about_website">Website:</string>
    <string name="about_used_libraries">Used libraries:</string>
    <string name="about_website_url" translatable="false">https://github.com/felixb/basscast</string>
    <string name="about_libraries_butterknife" translatable="false">butterknife, Apache License 2.0, https://github.com/JakeWharton/butterknife</string>
    <string name="about_libraries_eucookieconsent" translatable="false">EU Cookie Consent, MIT License, https://github.com/felixb/eucookieconsent</string>
    <string name="about_libraries_jsoup" translatable="false">JSOUP, MIT License, http://jsoup.org/</string>
    <string name="about_libraries_okhttp" translatable="false">OkHTTP, Apache License 2.0, https://github.com/square/okhttp</string>
    <string name="about_libraries_simple_sql_provider" translatable="false">Simple SQL Provider, Apache License 2.0, https://github.com/ckurtm/simple-sql-provider</string>
    <string name="error_fetching_mime_type">Problem fetching mime type</string>
    <string name="error_fetching_stream">Problem fetching stream content</string>
    <string name="error_loading_media">Problem occurred with media during loading</string>
    <string name="error_queueing_media">Problem occurred with media during queueing</string>
    <string name="error_play_from_queue">Problem occurred while jumping to queue item</string>
    <string name="error_removing_from_queue">Problem occurred while removing item from queue</string>
    <string name="error_clearing_queue">Problem occurred while clearing the queue</string>
    <string name="error_opening_media">Problem opening media during loading</string>
    <string name="error_not_connected">You need to connect to a chrome cast device first</string>
</resources>
